[project]
name = "yolo-3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filterpy>=1.4.5",
    "lap>=0.4.0",
    "matplotlib>=3.7.0",
    "numpy>=1.22.0",
    "opencv-python>=4.7.0",
    "pillow>=9.4.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "scikit-image>=0.20.0",
    "scipy>=1.10.0",
    "timm>=0.9.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.50.0",
    "ultralytics>=8.0.0",
]
